--- a/app/src/main/res/layout/activity_login_correcto.xml
+++ b/app/src/main/res/layout/activity_login_correcto.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="156dp"
             android:layout_marginEnd="168dp"
-            android:text="Bienvenido"
+            android:text="@string/bienvenido"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="512dp"
             android:layout_marginEnd="136dp"
-            android:text="Poner alarma"
+            android:text="@string/poner_alarma"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
