--- a/app/src/main/res/layout/activity_modificar_credenciales.xml
+++ b/app/src/main/res/layout/activity_modificar_credenciales.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Nuevo nombre de usuario:" />
+                android:text="@string/nuevo_nombre_de_usuario" />
 
             <EditText
                 android:id="@+id/editTextNuevoNombre"
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Nueva contraseña:" />
+                android:text="@string/nueva_contrase_a" />
 
             <EditText
                 android:id="@+id/editTextNuevaPasswd"
@@ -62,7 +62,7 @@
             android:id="@+id/buttonGuardarChn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Guardar cambios" />
+            android:text="@string/guardar_cambios" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
